add: adiciona endpoints Perfil
