# app/Models/Catalogo.php
@@ -6,16 +6,22 @@ use Illuminate\Database\Eloquent\Model;
 
 class Catalogo extends Model
 {
-    protected $table = 'Catalogo';
-    protected $primaryKey = 'id_catalogo';
+    protected $table = 'catalogos';
+    protected $primaryKey = 'id';
     public $timestamps = false;
 
     protected $fillable = [
-        'arquivo', 'nome_arquivo', 'descricao', 'data_criacao', 'versao', 'ativo', 'id'
+        'arquivo',
+        'nome_arquivo',
+        'descricao',
+        'data_criacao',
+        'versao',
+        'ativo',
+        'id_empresa',
     ];
 
     public function empresa()
     {
-        return $this->belongsTo(Empresa::class, 'id');
+        return $this->belongsTo(Empresa::class, 'id_empresa');
     }
 }
