# app/Models/Plano.php
@@ -6,16 +6,20 @@ use Illuminate\Database\Eloquent\Model;
 
 class Plano extends Model
 {
-    protected $table = 'Plano';
-    protected $primaryKey = 'id_plano';
+    protected $table = 'planos';
+    protected $primaryKey = 'id';
     public $timestamps = false;
 
     protected $fillable = [
-        'nome_plano', 'valor', 'descricao', 'data_criacao', 'id'
+        'nome_plano',
+        'valor',
+        'descricao',
+        'data_criacao',
+        'id_empresa',
     ];
 
     public function empresa()
     {
-        return $this->belongsTo(Empresa::class, 'id');
+        return $this->belongsTo(Empresa::class, 'id_empresa');
     }
 }
